--- a/app/src/main/res/layout/activity_dodaj_wpis.xml
+++ b/app/src/main/res/layout/activity_dodaj_wpis.xml
@@ -33,6 +33,7 @@
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="391dp"
         android:text="Button"
+        android:onClick="wyslij"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
