--- a/app/src/main/res/layout/activity_dodaj_wpis.xml
+++ b/app/src/main/res/layout/activity_dodaj_wpis.xml
@@ -15,8 +15,8 @@
         android:layout_marginEnd="85dp"
         android:layout_marginBottom="499dp"
         android:ems="10"
+        android:hint="Tu dodaj kolor"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.533"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="161dp"
         android:layout_marginEnd="162dp"
-        android:layout_marginBottom="172dp"
+        android:layout_marginBottom="92dp"
         android:onClick="wyslij"
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -43,9 +43,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="99dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="99dp"
         android:ems="10"
+        android:hint="Tu dodaj wielkosc"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -55,33 +56,32 @@
     <EditText
         android:id="@+id/opis"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginStart="99dp"
-        android:layout_marginTop="81dp"
         android:layout_marginEnd="99dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="56dp"
         android:ems="10"
+        android:hint="Tu dodaj opis"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wielkosc" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/gatunek"
         android:layout_width="257dp"
         android:layout_height="47dp"
         android:layout_marginStart="76dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="78dp"
         android:layout_marginBottom="72dp"
-        android:entries="@array/spinner2"
+        android:entries="@array/gatunek"
         app:layout_constraintBottom_toTopOf="@+id/kolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
